# todoco

./: .dockerignore  .gitignore  LICENSE.md  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: release.yml
apps/desktop/: .env.development  .env.production.example  editor.html  index.html  package.json  vite.config.js
apps/desktop/src/: App.jsx  editor-main.jsx  main.jsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  desktop.json
apps/desktop/src-tauri/icons/: appicon.md  icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: AvatarFilterBar.jsx  InviteFriendsScreen.jsx  LoginScreen.jsx  RegisterScreen.jsx  SettingsModal.jsx  ShareModal.jsx  StatusModal.jsx  TaskList.jsx  Toast.jsx  WorkspaceJoinScreen.jsx  WorkspaceSelectionScreen.jsx  WorkspaceSwitcher.jsx
apps/desktop/src/lib/: api.js  cache.js  config.js  tauri.js
apps/desktop/src/pages/: MarkdownEditorPage.jsx
apps/server/: Dockerfile  package.json
apps/server/src/: admin-ui.js  index.js  realtime.js  store.js
docs/screenshots/: README.md
